Updated portfolio picture, bio, and deleted old practice codes.

--- a/.html/index.html
+++ b/.html/index.html
@@ -35,13 +35,13 @@
   </header>
   <main class="profile">
     <!--Add your Portrait image here-->
-    <img src="img/profile_portrait.png"  width= "300px" height="300px" class="profile_portrait" alt="This is a photograph of Ashley Romick. She has brown hair and blue eyes.">
+    <img src="img/img of ashley romick.png"  width= "300px" height="300px" class="profile_portrait" alt="This is a photograph of Ashley Romick. She has brown hair and blue eyes.">
     <h1>Hello World!</h1>
     <a href="#">Default Link</a>
     <button type="button"> Default Button</button>
     <button class="button__secondary">Secondary Button</button>
     <p>
-      My name is Ashley Romick. I am a <span>web </span> developer from the United States of America.
+      Hello, I'm Ashley Romick - a passionate web developer with a knack for turning ideas into vibrant, interactive experiences. With a blend of creativity and technical expertise, I craft websites that not just visually appealing, but also highly functional and accessible to all. From sleek landing pages to dynamic web applications, I bring a unique touch to every project. Let's build something amazing together!
     </p>
     <a href="#">Check out some of my code</a>
   </main>
