Put all h1-h3 on same line, removed unnecessary code, and spaces,

--- a/.html/about.html
+++ b/.html/about.html
@@ -7,15 +7,15 @@
     <link rel="icon" type="image/png" href="img/#" sizes="32x32" />
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.production.css">
-   
+    <link rel="stylesheet" type="text/css" href="css/style.production.css">  
 </head>
 
 <body>
   <script src="js/tota11y.min.js"></script>
+
   <header class="page-header">
     <img src="img/Logo.png" height="70px" width="200px" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
-    <nav class="main-navigation page-header_item"></nav>
+    <nav class="main-navigation page-header_item">
       <ul role="menubar" class="navigation-list">
         <li role="presetation">
           <a href="index.html" role="menuitem" class="navigation-list_item" >Home</a>
@@ -24,7 +24,7 @@
           <a href="about.html" role="menuitem" class="navigation-list_item" >About</a>
         </li> 
         <li>
-          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a> </a>
+          <a href="work.html" role="menubar" class="navigation-list_item" >Work</a> </a>
         </li>
         <li>
           <a href="contact.html" role="menuitem" class="navigation-list_item" >Contact</a>
@@ -32,38 +32,28 @@
       </ul>
     </nav>
   </header>
+
 <main class="profile">
-<!--work on coming up with a better About section-->
-<H1>
-    About Me
-</H1>
-<h2>
-    Who Am I?
-  </h2>
+<H1>About Me</H1>
+<h2>Who Am I?</h2>
   <p>
     Hey there! I'm Ashley Romick, a web developer with a knack for crafting elegant and efficient digital solutions. My journey into the world of web development started five years ago, and since then, I’ve been passionate about transforming ideas into interactive, user-friendly web experiences.
   </p> 
-  <h2>
-    My Superpowers
-  </h2>
+  <h2>My Superpowers</h2>
   <p>
     HTML & CSS: The bread and butter of web development. I turn designs into pixel-perfect websites with clean, maintainable code. <br>
     JavaScript & Frameworks: From vanilla JS to frameworks like React and Vue, I bring websites to life with dynamic, responsive features. <br>
     Back-end Development: I build robust back-ends using Node.js, Express, and databases like MongoDB and MySQL. <br>
     Problem Solving: Whether it’s a tricky bug or a complex feature, I love diving deep into challenges and coming up with creative solutions. <br>
   </p>
-  <h2>
-    Fun Facts
-  </h2>
+  <h2>Fun Facts</h2>
   <P>
     The Early Bird: I’m most productive in the early hours of the morning. A fresh pot of coffee and the sunrise are my coding companions. <br>
     Coding Playlist: My go-to music while coding? A mix of Folk and Indie. It keeps me in the zone and fuels my creativity. <br>
     Gaming Enthusiast: When I’m not coding, you’ll find me exploring virtual worlds in the latest RPGs or battling it out in competitive games. <br>
     Nature Lover: I balance my screen time with hikes and nature walks. Fresh air and greenery help me recharge and find inspiration. <br>
   </P>
-  <h2>
-    My Development Philosophy
-  </h2>
+  <h2>My Development Philosophy</h2>
   <p>
     I believe that great web development is about more than just writing code. It’s about understanding user needs, creating intuitive interfaces, and ensuring accessibility for all. My goal is to build websites that not only look stunning but also offer seamless and enjoyable user experiences.
   </p>
@@ -1776,6 +1766,7 @@
   </table>
   </div>
 </main>
+
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">  
