--- a/.html/index.html
+++ b/.html/index.html
@@ -14,9 +14,10 @@
 
 <body>
   <script src="js/tota11y.min.js"></script>
+  
   <header class="page-header">
     <img src="img/Logo.png" height="70px" width="200px" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
-    <nav class="main-navigation page-header_item"></nav>
+    <nav class="main-navigation page-header_item">
       <ul role="menubar" class="navigation-list">
         <li role="presetation">
           <a href="index.html" role="menuitem" class="navigation-list_item" >Home</a>
@@ -33,8 +34,8 @@
       </ul>
     </nav>
   </header>
+
   <main class="profile">
-    <!--Add your Portrait image here-->
     <img src="img/img of ashley romick.png"  width= "300px" height="300px" class="profile_portrait" alt="This is a photograph of Ashley Romick. She has brown hair and blue eyes.">
     <h1>Hello World!</h1>
     <a href="#">Default Link</a>
@@ -45,8 +46,11 @@
     </p>
     <a href="#">Check out some of my code</a>
   </main>
+
   <footer class="page-footer">
-    <p>Find me on</p>
+    <p>
+      Find me on
+    </p>
     <div class="social-media">  
       <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
       <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
