--- a/.html/work.html
+++ b/.html/work.html
@@ -15,9 +15,10 @@
 
 <body>
   <script src="js/tota11y.min.js"></script>
+  
   <header class="page-header">
     <img src="img/Logo.png" height="70px" width="200px" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
-    <nav class="main-navigation page-header_item"></nav>
+    <nav class="main-navigation page-header_item">
       <ul role="menubar" class="navigation-list">
         <li role="presetation">
           <a href="index.html" role="menuitem" class="navigation-list_item" >Home</a>
@@ -34,61 +35,50 @@
       </ul>
     </nav>
   </header>
+
 <main class="profile">
   <section>
-    <h1>
-        Work
-    </h1>
+    <h1>Work</h1>
     <div class="grid">
       <div class="grid_item">
-        <h2>
-            Mobile Web App
-        </h2>
+        <h2>Mobile Web App</h2>
         <p>
-            Within this project, I was responsible for the frontend. It's writtten in React.js. Additionally, I've created the HTML and CSS templates. 
+            Within this project, I was responsible for the frontend. 
+            It's writtten in React.js.
+            Additionally, I've created the HTML and CSS templates. 
         </p>
         <a href="#">See project on GitHub</a>
       </div>
       <div class="grid_item">
-        <h2>
-            Project 2
-        </h2>
+        <h2>Project 2</h2>
         <p>
             Within this project I...
         </p>
         <a href="#"> See project on GitHub</a>
       </div>
       <div class="grid_item">
-        <h2>
-            Project 3
-        </h2>
+        <h2>Project 3</h2>
         <p>
             Within this project I...
         </p>
         <a href="#">See my project on GitHub</a>
       </div>
       <div class="grid_item">
-        <h2>
-            Project 4
-        </h2>
+        <h2>Project 4</h2>
         <p>
             Within this project I...
         </p>
         <a href="#">See my project on GitHub</a>
       </div>
         <div class="grid_item">
-            <h2>
-                Project 5
-            </h2>
+            <h2>Project 5</h2>
             <p>
                 Within this project I...
             </p>
             <a href="#">See my project on GitHub</a>
         </div>
         <div class="grid_item">
-            <h2>
-                Project 6
-            </h2>
+            <h2>Project 6</h2>
             <p>
                 Within this project I...
             </p>
@@ -98,6 +88,7 @@
     </div>
   </section>
 </main>
+
   <footer class="page-footer">
     <p>Find me on</p>
     <div class="social-media">  
