changed color schemes to be more simplistic, changed table to add a design,  changed logo to ensure that it is a good fit for my portfolio

--- a/.html/about.html
+++ b/.html/about.html
@@ -1738,29 +1738,29 @@
     </svg>
   
   <div>
-    <table>
+    <table class="Skills">
       <thead>
-        <tr>
-          <th>Skills</th>
-          <th>Years of Experience</th>
-          <th>Level of Expertise</th>
+        <tr class="skill-tr">
+          <th class="skill-th">Skills</th>
+          <th class="skill-th">Years of Experience</th>
+          <th class="skill-th">Level of Expertise</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>Microsoft Office</td>
-          <td>6</td>
-          <td>Advanced</td>
+        <tr class="skill-tr">
+          <td class="skill-td">Microsoft Office</td>
+          <td class="skill-td">6</td>
+          <td class="skill-td">Advanced</td>
         </tr>
-        <tr>
-          <td>LMS</td>
-          <td>3</td>
-          <td>Intermediate</td>
+        <tr class="skill-tr">
+          <td class="skill-td">LMS</td>
+          <td class="skill-td">3</td>
+          <td class="skill-td">Intermediate</td>
         </tr>
-        <tr>
-          <td>Factory Capability Framework</td>
-          <td>3</td>
-          <td>Intermediate</td>
+        <tr class="skill-tr">
+          <td class="skill-td">Factory Capability Framework</td>
+          <td class="skill-td">3</td>
+          <td class="skill-td">Intermediate</td>
         </tr>
       </tbody>
   </table>
