--- a/.html/contact.html
+++ b/.html/contact.html
@@ -67,7 +67,7 @@
           <label class="standard-label" for="message">Message: </label>
         <textarea maxlength="240" id="message"></textarea><br>
     
-      <input type="submit" value="Submit">
+      <input class="button" type="submit" value="Submit">
     </div>
   </div>
       </form>
