Fixed Table to add different words and style, Fixed Footer to add a border, Fixed minor issues in the code.

--- a/.html/about.html
+++ b/.html/about.html
@@ -1741,40 +1741,60 @@
     <table class="Skills">
       <thead>
         <tr class="skill-tr">
-          <th class="skill-th">Skills</th>
-          <th class="skill-th">Years of Experience</th>
-          <th class="skill-th">Level of Expertise</th>
+          <th class="skill-th">Skill Category</th>
+          <th class="skill-th">Specific Skills</th>
+          <th class="skill-th">Example Projects</th>
+          <th class="skill-th">Description</th>
         </tr>
       </thead>
       <tbody>
         <tr class="skill-tr">
-          <td class="skill-td">Microsoft Office</td>
-          <td class="skill-td">6</td>
-          <td class="skill-td">Advanced</td>
+          <td class="skill-td">Front-end</td>
+          <td class="skill-td">HTML, CSS, JavaScript, React</td>
+          <td class="skill-td">Portfolio Website, E-commerce Store</td>
+          <td class="skill-td">Created responsive and user-friendly interfaces</td>
         </tr>
         <tr class="skill-tr">
-          <td class="skill-td">LMS</td>
-          <td class="skill-td">3</td>
-          <td class="skill-td">Intermediate</td>
+          <td class="skill-td">Back-end</td>
+          <td class="skill-td">Node.js, Express, Python, Django</td>
+          <td class="skill-td">Empty</td>
+          <td class="skill-td">Developed robust server-side applications</td>
         </tr>
         <tr class="skill-tr">
-          <td class="skill-td">Factory Capability Framework</td>
-          <td class="skill-td">3</td>
-          <td class="skill-td">Intermediate</td>
+          <td class="skill-td">Database</td>
+          <td class="skill-td">MySQL, MongoDB, PostgreSQL</td>
+          <td class="skill-td">Empty</td>
+          <td class="skill-td">Designed and optimized database schemas</td>
+        </tr>
+        <tr class="skill-tr">
+          <td class="skill-td">DevOps</td>
+          <td class="skill-td">Docker, Git, CI/CD</td>
+          <td class="skill-td">Empty</td>
+          <td class="skill-td">Implimented continuous integration and deployment</td>
+        </tr>
+        <tr class="skill-tr">
+          <td class="skill-td">Design</td>
+          <td class="skill-td">Adobe XD, Figma, Sketch</td>
+          <td class="skill-td">Empty</td>
+          <td class="skill-td">Developed wireframes and interactive prototypes</td>
         </tr>
       </tbody>
   </table>
   </div>
 </main>
 
-  <footer class="page-footer">
-    <p>Find me on</p>
-    <div class="social-media">  
-      <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
-      <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
-      <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
-    </div>
-  </footer>
+<footer class="page-footer">
+  <hr>
+  <p>
+    Find me on
+  </p>
+  <div class="social-media">  
+    <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
+    <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
+    <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
+  </div>
+</hr>
+</footer>
 
 </body>
 
