--- a/.html/work.html
+++ b/.html/work.html
@@ -89,14 +89,18 @@
   </section>
 </main>
 
-  <footer class="page-footer">
-    <p>Find me on</p>
-    <div class="social-media">  
-      <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
-      <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
-      <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
-    </div>
-  </footer>
+<footer class="page-footer">
+  <hr>
+  <p>
+    Find me on
+  </p>
+  <div class="social-media">  
+    <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
+    <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
+    <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
+  </div>
+</hr>
+</footer>
 
 </body>
 
