Ran code through linter. made minor changes throughout to bad code.

--- a/.html/contact.html
+++ b/.html/contact.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>Ashley Romick - Portfolio</title>
-    <link rel="icon" type="image/png" href="img/#" sizes="32x32" />
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" type="image/png" href="img/#" sizes="32x32">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
-   
+    <title>Ashley Romick - Portfolio</title>
 </head>
 
 <body>
@@ -25,7 +26,7 @@
           <a href="about.html" role="menuitem" class="navigation-list_item" >About</a>
         </li> 
         <li>
-          <a href="work.html" role="menubar" class="navigation-list_item" >Work</a> </a>
+          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a>
         </li>
         <li>
           <a href="contact.html" role="menuitem" class="navigation-list_item" >Contact</a>
@@ -83,7 +84,6 @@
     <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
     <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
   </div>
-</hr>
 </footer>
 
 </body>
