--- a/.html/index.html
+++ b/.html/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="img/#" sizes="32x32" />
+    <link rel="icon" type="image/png" href="img/#" sizes="32x32">
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.production.css">
@@ -26,7 +26,7 @@
           <a href="about.html" role="menuitem" class="navigation-list_item" >About</a>
         </li> 
         <li>
-          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a> </a>
+          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a>
         </li>
         <li>
           <a href="contact.html" role="menuitem" class="navigation-list_item" >Contact</a>
@@ -57,7 +57,6 @@
       <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
       <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
     </div>
-  </hr>
   </footer>
 
 </body>
