Ran code through Linter. Changed bad code on footer, and images.

--- a/.html/work.html
+++ b/.html/work.html
@@ -94,9 +94,9 @@
     Find me on
   </p>
   <div class="social-media">  
-    <img src="img/GitHub Icon 2.0.png" width="30px" height="30px" alt="Github">
-    <img src="img/Twittter.png" width="30px" height="30px" alt="Twitter">
-    <img src="img/LinkedIn Icon.png" width="30px" height="30px" alt="LinkedIn">
+    <img src="img/github-icon.png" width="30" height="30" alt="Github">
+    <img src="img/twitter-icon.png" width="30" height="30" alt="Twitter">
+    <img src="img/linkedin-icon.png" width="30" height="30" alt="LinkedIn">
   </div>
 </footer>
 
