ran code through linter. Fixed imgs and broken codes.

--- a/.html/work.html
+++ b/.html/work.html
@@ -16,24 +16,25 @@
   <script src="js/tota11y.min.js"></script>
   
   <header class="page-header">
-    <img src="img/Logo.png" height="70px" width="200px" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
+    <img src="img/Logo.png" height="70" width="200" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
     <nav class="main-navigation page-header_item">
       <ul role="menubar" class="navigation-list">
         <li role="presetation">
-          <a href="index.html" role="menuitem" class="navigation-list_item" >Home</a>
+          <a href="index.html" role="menuitem" class="navigation-list_item">Home</a>
         </li>
         <li>
-          <a href="about.html" role="menuitem" class="navigation-list_item" >About</a>
+          <a href="about.html" role="menuitem" class="navigation-list_item">About</a>
         </li> 
         <li>
-          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a>
+          <a href="work.html" role="menubar" class="navigation-list_item">Work</a>
         </li>
         <li>
-          <a href="contact.html" role="menuitem" class="navigation-list_item" >Contact</a>
+          <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
         </li>
       </ul>
     </nav>
   </header>
+
 
 <main class="profile">
   <section>
