--- a/.html/index.html
+++ b/.html/index.html
@@ -16,27 +16,27 @@
   <script src="js/tota11y.min.js"></script>
   
   <header class="page-header">
-    <img src="img/Logo.png" height="70px" width="200px" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
+    <img src="img/Logo.png" height="70" width="200" alt="A logo with the name Ashley Romick and underneath are the words Crafting Digital Dreams."> 
     <nav class="main-navigation page-header_item">
       <ul role="menubar" class="navigation-list">
         <li role="presetation">
-          <a href="index.html" role="menuitem" class="navigation-list_item" >Home</a>
+          <a href="index.html" role="menuitem" class="navigation-list_item">Home</a>
         </li>
         <li>
-          <a href="about.html" role="menuitem" class="navigation-list_item" >About</a>
+          <a href="about.html" role="menuitem" class="navigation-list_item">About</a>
         </li> 
         <li>
-          <a href="work.html" role="menubar" class="navigation-list_item" > Work</a>
+          <a href="work.html" role="menubar" class="navigation-list_item">Work</a>
         </li>
         <li>
-          <a href="contact.html" role="menuitem" class="navigation-list_item" >Contact</a>
+          <a href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
         </li>
       </ul>
     </nav>
   </header>
 
   <main class="profile">
-    <img src="img/img of ashley romick.png"  width= "300px" height="300px" class="profile_portrait" alt="This is a photograph of Ashley Romick. She has brown hair and blue eyes.">
+    <img src="img/profile-img.png"  width= "300" height="300" class="profile_portrait" alt="This is a photograph of Ashley Romick. She has brown hair and blue eyes.">
     <h1>Hello World!</h1>
     <a href="#">Default Link</a>
     <button type="button"> Default Button</button>
