ran code through linter. Made minor changes and fixed broken codes.

--- a/.html/contact.html
+++ b/.html/contact.html
@@ -40,7 +40,7 @@
   <h1>Get in Touch</h1>
   <div>
     <p>
-      <a href="mailto: ashley.romick@gmail.com">Contact</a>
+      <a href="mailto:ashley.romick@gmail.com">Contact</a>
     </p>
     <H2>Let's Create Something Amazing!</H2>
       <p>
@@ -49,9 +49,9 @@
         Whether you have a project idea, need a website revamp, or just want to chat about the latest web trends, I'm all ears!
       </p>
     <h2>How to Reach Me:</h2>    
-    <a href="tel:+1 775 513 4577">Phone: +1 (775) 513-4577</a>
+    <a href="tel:+17755134577">Phone: +1 (775) 513-4577</a>
     <br>
-    <a href="mailto: ashley.romick@gmail.com">Email: ashley.romick@gmail.com</a>
+    <a href="mailto:ashley.romick@gmail.com">Email: ashley.romick@gmail.com</a>
     <br>
     <a href="https://www.linkedin.com/in/ashley-romick-8057082b0/"> LinkedIn/ashleyromick</a>
     <br>
@@ -59,7 +59,7 @@
     <br>
     <h2>Or Fill Out This Handy Form</h2>
     <div>
-      <form action="" method="post">
+      <form action="/placeholder.com" method="post">
         <label class="standard-label" for="contact-email">E-mail: </label>
           <input type="email" id="contact-email" required><br>
     
@@ -70,9 +70,9 @@
         <textarea maxlength="240" id="message"></textarea><br>
     
       <input class="button" type="submit" value="Submit">
-    </div>
+      </form>
+    </div>  
   </div>
-</form>   
 </main>
 
 <footer class="page-footer">
