lower cased headers and paragraph tags

--- a/.html/about.html
+++ b/.html/about.html
@@ -37,7 +37,7 @@
 
 
 <main class="profile">
-<H1>About Me</H1>
+<h1>About Me</h1>
 <h2>Who Am I?</h2>
   <p>
     Hey there! I'm Ashley Romick, a web developer with a knack for crafting elegant and efficient digital solutions. My journey into the world of web development started five years ago, and since then, I’ve been passionate about transforming ideas into interactive, user-friendly web experiences.
@@ -50,12 +50,12 @@
     Problem Solving: Whether it’s a tricky bug or a complex feature, I love diving deep into challenges and coming up with creative solutions. <br>
   </p>
   <h2>Fun Facts</h2>
-  <P>
+  <p>
     The Early Bird: I’m most productive in the early hours of the morning. A fresh pot of coffee and the sunrise are my coding companions. <br>
     Coding Playlist: My go-to music while coding? A mix of Folk and Indie. It keeps me in the zone and fuels my creativity. <br>
     Gaming Enthusiast: When I’m not coding, you’ll find me exploring virtual worlds in the latest RPGs or battling it out in competitive games. <br>
     Nature Lover: I balance my screen time with hikes and nature walks. Fresh air and greenery help me recharge and find inspiration. <br>
-  </P>
+  </p>
   <h2>My Development Philosophy</h2>
   <p>
     I believe that great web development is about more than just writing code. It’s about understanding user needs, creating intuitive interfaces, and ensuring accessibility for all. My goal is to build websites that not only look stunning but also offer seamless and enjoyable user experiences.
