--- a/.html/contact.html
+++ b/.html/contact.html
@@ -42,7 +42,7 @@
     <p>
       <a href="mailto:ashley.romick@gmail.com">Contact</a>
     </p>
-    <H2>Let's Create Something Amazing!</H2>
+    <h2>Let's Create Something Amazing!</h2>
       <p>
         Hey there! 
         If you've made it this far, it means you're probably as excited about web development as I am. 
