--- a/.html/about.html
+++ b/.html/about.html
@@ -44,8 +44,8 @@
   </p> 
   <h2>My Superpowers</h2>
   <p>
-    HTML & CSS: The bread and butter of web development. I turn designs into pixel-perfect websites with clean, maintainable code. <br>
-    JavaScript & Frameworks: From vanilla JS to frameworks like React and Vue, I bring websites to life with dynamic, responsive features. <br>
+    HTML and CSS: The bread and butter of web development. I turn designs into pixel-perfect websites with clean, maintainable code. <br>
+    JavaScript and Frameworks: From vanilla JS to frameworks like React and Vue, I bring websites to life with dynamic, responsive features. <br>
     Back-end Development: I build robust back-ends using Node.js, Express, and databases like MongoDB and MySQL. <br>
     Problem Solving: Whether it’s a tricky bug or a complex feature, I love diving deep into challenges and coming up with creative solutions. <br>
   </p>
