add list and class
Madea list of Pokemon and named the class pokemon-list to ensure that it works on js

--- a/simple-js-app/index.html
+++ b/simple-js-app/index.html
@@ -6,7 +6,10 @@
     <title>Simple JS App</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
+
   <body>
+    <ul class="pokemon-list"></ul>
     <script src="js/scripts.js"></script>
   </body>
+
 </html>
