--- a/simple-js-app/index.html
+++ b/simple-js-app/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Simple JS App</title>
-    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
+    <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
-    <script src="js/scripts.js"></script>
+    <strong>
+      <script src="promise-polyfill.js"></script>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/scripts.js"></script>
+    </strong>
   </body>
-
 </html>
