add modal to code
In css, I added styling for the modal. In HTML, I added a modal class and id. In the JavaScript I added a functioning modal.

--- a/simple-js-app/index.html
+++ b/simple-js-app/index.html
@@ -4,16 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Simple JS App</title>
+    <title>Pokedex</title>
   </head>
 
   <body>
     <h1>Pokedex</h1>
     <ul class="pokemon-list"></ul>
-    <strong>
-      <script src="promise-polyfill.js"></script>
-      <script src="js/fetch-polyfill.js"></script>
-      <script src="js/scripts.js"></script>
-    </strong>
+    <div id="modal-container" class="modal"></div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
