add styling to code

--- a/simple-js-app/index.html
+++ b/simple-js-app/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Pokedex</title>
   </head>
-
   <body>
-    <h1>Pokedex</h1>
-    <ul class="pokemon-list"></ul>
+    <header>
+      <h1>Pokedex</h1>
+    </header>
+    <main>
+      <ul class="pokemon-list"></ul>
+    </main>
     <div id="modal-container" class="modal"></div>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch-polyfill.js"></script>
